this is the file

--- a/index.html
+++ b/index.html
@@ -26,23 +26,26 @@
             right:50%;
             top:45%;
             transform:translate(-50%,-50%);
-            width:60%;
+            width:70%;
             
         }
         .question{
             font-size:30px;
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             border:2px solid black;
             padding:5px;
             text-align:center;
             border-radius:10px;
             background-color:none;
+            margin-bottom:24px;
         }
         .buttons{
             display:flex;
             flex-direction:column;
-            width:75%;
+            width:80%;
             margin:auto;  
             transition-property:all; 
+            margin-bottom:45px;
         }
         .bt{
             border:3px double gray;
@@ -50,8 +53,8 @@
             font-size:18px;
             color:white;
             background:palegoldenrod;
-            margin:3px;
-            padding:3px;
+            margin:5px;
+            padding:7px;
         }
         .bt:hover{
             background:yellow;
