this is the file

--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
         #btn-4:hover{
             background:#4157c2;
         }
+        @media only screen and (max-height:465px) and (orientation: landscape){
+            .container{
+                margin-top:52px;
+            }
+            .bt{
+                font-size:15px;
+            }
+            .question{
+                margin-bottom:19px;
+            }
+        }
     </style>
 </head>
 
