this is the file

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             top:45%;
             transform:translate(-50%,-50%);
             width:70%;
+            height:50%;
+            overflow-y: auto;
             
         }
         .question{
@@ -110,6 +112,16 @@
             <button class="bt" id="btn-2" onclick="check2()">126</button>
             <button class="bt" id="btn-3" onclick="check3()">244</button>
             <button class="bt" id="btn-4" onclick="check4()">196</button>
+            <div id="i1" style="font-size:45px" ><span></span></div>
+            <div id="i2" style="font-size:45px" ><span></span></div>
+            <div id="i3" style="font-size:45px"><span></span></div>
+            <div id="i4" style="font-size:45px"><span></span></div>
+            <div id="i5" style="font-size:45px"><span></span></div>
+            <div id="i6" style="font-size:45px"><span></span></div>
+            <div id="i7" style="font-size:45px"><span></span></div>
+            <div id="i8" style="font-size:45px"><span></span></div>
+            <div id="i9" style="font-size:45px"><span></span></div>
+            <div id="i10" style="font-size:45px"><span></span></div>
         </div>
     </div>
 </body>
@@ -220,6 +232,16 @@
                 btn2.style.display = "none";
                 btn3.style.display = "none";
                 btn4.style.display = "none";
+                document.getElementById("i1").innerHTML = "corrent answers are : <br/>1) 144";
+                document.getElementById("i2").innerHTML = "2) 6";
+                document.getElementById("i3").innerHTML = "3) 7";
+                document.getElementById("i4").innerHTML = "4) 206";
+                document.getElementById("i5").innerHTML = "5) wings";
+                document.getElementById("i6").innerHTML = "6) 72000";
+                document.getElementById("i7").innerHTML = "7) shahjahan";
+                document.getElementById("i8").innerHTML = "8) 117";
+                document.getElementById("i9").innerHTML = "9) philosphy";
+                document.getElementById("i10").innerHTML = "10) 84";
             }
             currentquestion++;
 
@@ -324,6 +346,16 @@
                 btn2.style.display = "none";
                 btn3.style.display = "none";
                 btn4.style.display = "none";
+                document.getElementById("i1").innerHTML = "corrent answers are : <br/>1) 144";
+                document.getElementById("i2").innerHTML = "2) 6";
+                document.getElementById("i3").innerHTML = "3) 7";
+                document.getElementById("i4").innerHTML = "4) 206";
+                document.getElementById("i5").innerHTML = "5) wings";
+                document.getElementById("i6").innerHTML = "6) 72000";
+                document.getElementById("i7").innerHTML = "7) shahjahan";
+                document.getElementById("i8").innerHTML = "8) 117";
+                document.getElementById("i9").innerHTML = "9) philosphy";
+                document.getElementById("i10").innerHTML = "10) 84";
             }
             currentquestion++;
 
@@ -428,6 +460,16 @@
                 btn2.style.display = "none";
                 btn3.style.display = "none";
                 btn4.style.display = "none";
+                document.getElementById("i1").innerHTML = "corrent answers are : <br/>1) 144";
+                document.getElementById("i2").innerHTML = "2) 6";
+                document.getElementById("i3").innerHTML = "3) 7";
+                document.getElementById("i4").innerHTML = "4) 206";
+                document.getElementById("i5").innerHTML = "5) wings";
+                document.getElementById("i6").innerHTML = "6) 72000";
+                document.getElementById("i7").innerHTML = "7) shahjahan";
+                document.getElementById("i8").innerHTML = "8) 117";
+                document.getElementById("i9").innerHTML = "9) philosphy";
+                document.getElementById("i10").innerHTML = "10) 84";
             }
             currentquestion++;
 
@@ -532,6 +574,17 @@
                 btn2.style.display = "none";
                 btn3.style.display = "none";
                 btn4.style.display = "none";
+                document.getElementById("i1").innerHTML = "corrent answers are : <br/>1) 144";
+                document.getElementById("i2").innerHTML = "2) 6";
+                document.getElementById("i3").innerHTML = "3) 7";
+                document.getElementById("i4").innerHTML = "4) 206";
+                document.getElementById("i5").innerHTML = "5) wings";
+                document.getElementById("i6").innerHTML = "6) 72000";
+                document.getElementById("i7").innerHTML = "7) shahjahan";
+                document.getElementById("i8").innerHTML = "8) 117";
+                document.getElementById("i9").innerHTML = "9) philosphy";
+                document.getElementById("i10").innerHTML = "10) 84";
+
             }
             currentquestion++;
 
