this is my quiz app

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 btn2.style.display = "none";
                 btn3.style.display = "none";
                 btn4.style.display = "none";
-                document.getElementById("i1").innerHTML = "corrent answers are : <br/>1) 144";
+                document.getElementById("i1").innerHTML = "correct answers are : <br/>1) 144";
                 document.getElementById("i2").innerHTML = "2) 6";
                 document.getElementById("i3").innerHTML = "3) 7";
                 document.getElementById("i4").innerHTML = "4) 206";
@@ -346,7 +346,7 @@
                 btn2.style.display = "none";
                 btn3.style.display = "none";
                 btn4.style.display = "none";
-                document.getElementById("i1").innerHTML = "corrent answers are : <br/>1) 144";
+                document.getElementById("i1").innerHTML = "correct answers are : <br/>1) 144";
                 document.getElementById("i2").innerHTML = "2) 6";
                 document.getElementById("i3").innerHTML = "3) 7";
                 document.getElementById("i4").innerHTML = "4) 206";
@@ -460,7 +460,7 @@
                 btn2.style.display = "none";
                 btn3.style.display = "none";
                 btn4.style.display = "none";
-                document.getElementById("i1").innerHTML = "corrent answers are : <br/>1) 144";
+                document.getElementById("i1").innerHTML = "correct answers are : <br/>1) 144";
                 document.getElementById("i2").innerHTML = "2) 6";
                 document.getElementById("i3").innerHTML = "3) 7";
                 document.getElementById("i4").innerHTML = "4) 206";
@@ -574,7 +574,7 @@
                 btn2.style.display = "none";
                 btn3.style.display = "none";
                 btn4.style.display = "none";
-                document.getElementById("i1").innerHTML = "corrent answers are : <br/>1) 144";
+                document.getElementById("i1").innerHTML = "correct answers are : <br/>1) 144";
                 document.getElementById("i2").innerHTML = "2) 6";
                 document.getElementById("i3").innerHTML = "3) 7";
                 document.getElementById("i4").innerHTML = "4) 206";
